--- a/public/modules/regions/views/list-regions.client.view.html
+++ b/public/modules/regions/views/list-regions.client.view.html
@@ -3,7 +3,7 @@
         <h1>Регионы</h1>
     </div>
     <div id="filter-area">
-        <span>Фильтр по наименованию: </span><input type="text" ng-model="filterOptions.filterText" placeholder="Filter">
+        <span>Фильтр по наименованию: </span><input type="text" ng-model="filterOptions.filterText" placeholder="Регион">
     </div>
     <div class="gridStyle" ng-grid="gridOptions"></div>
 
@@ -13,7 +13,7 @@
             width: 100%;
             height: 700px;
         }
-        .ngTotalSelectContainer
+        .ngFooterSelectedItems
         {
             display: none;
         }
